--- a/Digital.html
+++ b/Digital.html
@@ -382,7 +382,7 @@ Award Achievement
 <div class="row">
   <div class="col-lg-12 g-3">
   <div class="cont text-lg-start m-auto  d-lg-flex p-2 " >
-    <img src="./image/blog-4.jpg" class=" img-fluid mt-lg-1" alt="..." >
+    <img src="./image/blog-4.jpg" class=" img-fluid mt-lg-1 me-2" alt="..." >
     <div class="card-body">
       <div class="user d-flex fw-bold mb-2  justify-content-between ">
         <span class="special-word">Admin Post</span>
