--- a/Digital.html
+++ b/Digital.html
@@ -25,7 +25,7 @@
       <div class="collapse text-white  navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav m-auto  mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link fw-bold    p-2 p-lg-3 active" aria-current="page" href="#">Home</a>
+            <a class="nav-link fw-bold    p-2 p-lg-3 activeted" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link p-2 p-lg-3 fw-bold  " href="#about-us">About us</a>
