--- a/Digital.html
+++ b/Digital.html
@@ -56,7 +56,7 @@
 <p class="text-white-50 w-50 m-auto lh-lg ">We are a globally recognized,award-winning, full-ser
   vice creative digital agency that partners with brands across the globe</p>
 <div class="guide mt-3">
-  <a  class="btn main-btn text-black fw-bold ps-4 pe-4 me-3  rounded-pill" href="#">Discover More</a>
+  <a  class="btn main-btn text-black fw-bold ps-4 pe-4 me-3  rounded-pill" >Discover More</a>
 <a class="btn text-white" href="#">How it Work <i class="fa-solid fa-arrow-right-long ms-2"></i></a>
 </div>
 </div>
@@ -88,7 +88,7 @@
       <h5 class="card-title text-white ">UI/UX Design</h5>
  <p class="card-text text-white-50 fs-6 ">We'll create custome tailored logo specifically for your compant.</p>
 <div class="button">
- <a href="#" class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
+ <a  class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
   ></a>
 </div>
 </div>
@@ -101,7 +101,7 @@
       <h5 class="card-title text-white ">Web Delevopment</h5>
  <p class="card-text text-white-50 fs-6 ">We'll create custome tailored logo specifically for your compant.</p>
 <div class="button">
- <a href="#" class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
+ <a  class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
   ></a>
 </div>
 </div>
@@ -114,7 +114,7 @@
       <h5 class="card-title text-white ">Cyber Securtiy</h5>
  <p class="card-text text-white-50 fs-6 ">We'll create custome tailored logo specifically for your compant.</p>
 <div class="button">
- <a href="#" class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
+ <a  class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
   ></a>
 </div>
 </div>
@@ -127,7 +127,7 @@
       <h5 class="card-title text-white ">MERN Stack Development</h5>
  <p class="card-text text-white-50 fs-6 ">We'll create custome tailored logo specifically for your compant.</p>
 <div class="button">
- <a href="#" class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
+ <a class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
   ></a>
 </div>
 </div>
@@ -139,7 +139,7 @@
       <h5 class="card-title text-white ">Brand identity</h5>
  <p class="card-text text-white-50 fs-6 ">We'll create custome tailored logo specifically for your compant.</p>
 <div class="button">
- <a href="#" class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
+ <a  class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
   ></a>
 </div>
 </div>
@@ -151,7 +151,7 @@
       <h5 class="card-title text-white ">Digital Marketing</h5>
  <p class="card-text text-white-50 fs-6 ">We'll create custome tailored logo specifically for your compant.</p>
 <div class="button">
- <a href="#" class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
+ <a  class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
   ></a>
 </div>
 </div>
@@ -175,7 +175,7 @@ to unlock the full potential of your business.
 </h2>
 <p class="text-white-50 lh-lg  ">From convenstional PR and thought leadership initiatives to the art of storytelling and innpvative social media management, we've got every aspect covered </p>
 <p class="text-white-50 lh-lg  ">Something stands out from yhe ordinary order-talking vendors. we take  prids in being the preferred partner for some of the globe's leading  agencies and brands, owing to the trust they place in our expertise.</p>
-<a href="#" class="btn rounded-pill  fw-bold ">Explore us</a>
+<a  class="btn rounded-pill  fw-bold ">Explore us</a>
   </div>
 </div>
 <div class="our-work text-center mt-5 pt-2  ">
@@ -237,7 +237,7 @@ Award Achievement
       <span class="special-word">App design</span>
       <h5 class="card-title text-white ">Healthcare Medical App creative Design</h5>
 <div class="button">
- <a href="#" class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
+ <a  class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
   ></a>
 </div>
 </div>
@@ -250,7 +250,7 @@ Award Achievement
       <span class="special-word">Landing Page</span>
       <h5 class="card-title text-white ">Corporate Agency Landing Page</h5>
 <div class="button">
- <a href="#" class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
+ <a  class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
   ></a>
 </div>
 </div>
@@ -263,7 +263,7 @@ Award Achievement
 <span class="special-word">App interface</span>
       <h5 class="card-title text-white ">Corporate App interface Design</h5>
 <div class="button">
- <a href="#" class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
+ <a class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
   ></a>
 </div>
 </div>
@@ -339,7 +339,7 @@ Award Achievement
 
       </p>
       <div class="button  ">
-        <a href="#" class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
+        <a  class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
          ></a>
        </div>    </div>
   </div>
@@ -356,7 +356,7 @@ Award Achievement
         </div>
         <h5 class="card-title text-white ">WE Are Proud that We Can Change Some People Live </h5>
         <div class="button  ">
-          <a href="#" class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
+          <a  class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
            ></a>
          </div>    </div>
     </div>
@@ -372,7 +372,7 @@ Award Achievement
           </div>
           <h5 class="card-title text-white ">Innovative techniques For Digital Marketing Summary</h5>
           <div class="button  ">
-            <a href="#" class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
+            <a class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
              ></a>
            </div>
           </div>
@@ -390,7 +390,7 @@ Award Achievement
       </div>
       <h5 class="card-title text-white ">Professional technology and information solution</h5>
       <div class="button  ">
-        <a href="#" class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
+        <a  class="fw-bold ">Explore Now <i class="fa-solid fa-arrow-right-long ms-2"></i
          ></a>
        </div>
       </div>
@@ -414,7 +414,7 @@ Award Achievement
       <input type="email" class=" w-100 text-light  bg-black " placeholder="your email here">
     </div>
 <div class="col-lg-2 g-3">
-    <a href="#" class="sub-button fw-bold ">Subscribe</a>
+    <a  class="sub-button fw-bold ">Subscribe</a>
     </div>
 </div>
 </div>
@@ -454,22 +454,22 @@ Award Achievement
     </ul>
 <ul class="icon d-flex  justify-content-lg-start justify-content-center    list-unstyled gap-3 ">
   <li>
-    <a class="d-block text-light" href="#"
+    <a class="d-block text-light"
 ><i class="fa-brands fa-facebook fa-lg facebook rounded-circle p-2"></i
     ></a>
   </li>
   <li>
-    <a class="d-block text-light" href="#"
+    <a class="d-block text-light"
       ><i class="fa-brands fa-twitter fa-lg twitter rounded-circle p-2"></i
     ></a>
   </li>
   <li>
-    <a class="d-block text-light" href="#"
+    <a class="d-block text-light"
       ><i class="fa-brands fa-linkedin fa-lg linkedin rounded-circle p-2"></i
     ></a>
   </li>
   <li>
-    <a class="d-block text-light" href="#"
+    <a class="d-block text-light"
       ><i class="fa-brands fa-youtube fa-lg youtube rounded-circle p-2"></i
     ></a>
   </li>
